--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -22,13 +22,12 @@ section {
   overflow-x: hidden;
 }
 
-.slider-1,
-.slider-2 {
+.slider {
   width: 100%;
   height: 100%;
 }
 
-.slide {
+.slide__item {
   height: 100%;
   width: 100%;
   display: flex;
@@ -39,7 +38,7 @@ section {
   background-size: cover;
   transform: translateX(100%);
 }
-.slide::after {
+.slide__item::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -49,10 +48,10 @@ section {
   background-color: rgba(102, 90, 90, 0.432);
   z-index: -1;
 }
-.slide.active {
+.slide__item.active {
   transform: translateX(0%);
 }
-.slide.top {
+.slide__item.top {
   transition: 0.6s ease transform;
   z-index: 3;
 }
