--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -23,13 +23,12 @@ section {
   overflow-x: hidden;
 }
 
-.slider-1,
-.slider-2 {
+.slider {
   width: 100%;
   height: 100%;
 }
 
-.slide {
+.slide__item {
   height: 100%;
   width: 100%;
   display: flex;
