--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -27,7 +27,7 @@ section {
   height: 100%;
 }
 
-.slide__item {
+.slider__item {
   height: 100%;
   width: 100%;
   display: flex;
@@ -38,7 +38,7 @@ section {
   background-size: cover;
   transform: translateX(100%);
 }
-.slide__item::after {
+.slider__item::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -48,10 +48,10 @@ section {
   background-color: rgba(102, 90, 90, 0.432);
   z-index: -1;
 }
-.slide__item.active {
+.slider__item.active {
   transform: translateX(0%);
 }
-.slide__item.top {
+.slider__item.top {
   transition: 0.6s ease transform;
   z-index: 3;
 }
