--- a/styles/sass/main.scss
+++ b/styles/sass/main.scss
@@ -120,10 +120,15 @@ h1 {
           display: inline-block;
           min-width: 50rem;
           overflow: hidden;
-          white-space: nowrap;
+          padding: 0.8rem;
+
           &:focus-visible {
             border: #b83f45 0.2rem solid;
             border-radius: 100vmax;
+          }
+
+          &:read-only:focus-visible {
+            border: none;
           }
         }
       }
